--- a/app/client/style.css
+++ b/app/client/style.css
@@ -5,13 +5,14 @@
 :root {
   --matr-navbar-bg: #ECECEC;
   --matr-navbar-bg-rgb: 236, 236, 236;
+  --matr-navbar-text: #000000;
 }
 
 /* Change bootstrap variable values.
  See https://getbootstrap.com/docs/5.2/customize/css-variables/
  */
 body {
-  --bs-light-rgb: var(--matr-navbar-bg-rgb);
+  --bs-light-rgb: var(--matr-navbar-text);
 }
 
 /* Set the SignIn and SignUp alerts background. */
