--- a/app/client/style.css
+++ b/app/client/style.css
@@ -27,3 +27,8 @@ body {
   padding-top: 10px;
   padding-bottom: 20px;
 }
+
+/* Footer has no bottom margin value */
+.custom-footer {
+  margin-bottom: 20px;
+}
