Finished Event Calendar

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,5 +1,6 @@
 /* Use Open Sans as the default sans serif font. */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700|Source+Code+Pro:300,400,500,700");
+@import 'react-big-calendar/lib/sass/styles.scss';
 
 /* Set up some CSS variables to theme the application. */
 :root {
